# backscrub

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Dockerfile  EXPERIMENTAL.md  FindBackscrub.cmake  Makefile  README.md  body-pix-float-050-8.tflite  build.sh  deepseg.cc  docker-compose.yml  libbackscrub.cc  libbackscrub.h  libdeepseg.cc  libdeepseg.h  loopback.cc  loopback.h  retrain.md  transparent_viewer.c  transpose_conv_bias.cc
app/: background.cc  background.h  blend.cc  calcmask.cc  calcmask.h  deepseg.cc  utils.cc  utils.h
attic/: deepseg.py
backgrounds/: retrowave.webm  rotating_earth.webm
body-pix/: convert.sh  get-model.sh
bodypix/: convert.sh  get-model.sh  myconverter.py
iwyu/: backscrub.imp
lib/: libbackscrub.cc  libbackscrub.h  transpose_conv_bias.cc  transpose_conv_bias.h
models/: retrain.md
models/body-pix/: convert.sh  myconverter.py
videoio/: loopback.cc  loopback.h
